import gui.InvoiceFrame;

public class InvoiceRunner {
    public static void main(String[] args) {
        new InvoiceFrame();
    }
}
